added footer + contact

--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@ header{
 
 .homeContainer{
     width: 75%;
-    height: 60vh;
+    min-height: 60vh;
     margin: auto;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: center;
     grid-template-columns: repeat(2,1fr);
@@ -59,9 +60,8 @@ header{
 }
 
 .content h1{
-    font-size: 30px;
+    font-size: 38px;
     padding: 5px;
-    height: 100%;
     font-weight: bold;
 }
 
@@ -100,13 +100,17 @@ header{
     cursor: pointer;
 }
 
-
 .image{
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/2048px-Circle-icons-profile.svg.png);
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+    height: 90%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image img{
+    width: 200px;
+    height: 200px;
 }
 
 .about{
@@ -117,11 +121,12 @@ header{
 
 .aboutContentContainer{
     height: 90%;
-    width: 75%;
+    width: 80%;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .aboutImage{
@@ -130,7 +135,7 @@ header{
     justify-content: center;
     height: 250px;
     width: 20%;
-    
+    margin: 10px;
 }
 
 .aboutImage img{
@@ -141,6 +146,10 @@ header{
     object-fit: cover;
     display: block;
     margin: 0 auto;
+    margin: 10px;
+    box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
+
+
 }
 
 .aboutContent{
@@ -153,6 +162,8 @@ header{
     width: 65%;
     height: 40%;
     margin: 10px;
+    border: 2px solid #404040;
+    box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
 }
 
 .skills{
@@ -180,6 +191,7 @@ header{
     display: flex;
     flex-direction: column;
     color: #fff;
+    border: 2px solid #404040;
     box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
     
 }
@@ -237,6 +249,11 @@ header{
 .projects h1{
     font-size: 35px;
     margin: 10px;
+    font-weight: 800;
+}
+
+.title{
+    color: #fff;
 }
 
 .projectsContainer{
@@ -257,6 +274,9 @@ header{
     flex-direction: column;
     align-items: center;
     margin: 15px;
+    border: 2px solid #404040;
+    box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
+
 }
 
 .projectTop{
@@ -326,12 +346,74 @@ header{
     font-size: 16px;
 }
 
-
 #about:target{
     scroll-margin-top: 20px;
 }
 
+.contactContainer{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
 
+.contactContainer h1{
+    font-size: 30px;
+    margin: 15px;
+}
+
+.contacts{
+    min-height: 400px;
+    max-height: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contactBox{
+    height: 200px;
+    width: 25%;
+    background-color: #DE2E42;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 2px solid #404040;
+    box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
+
+}
+
+.contactBox a{
+    font-size: 28px;
+    color: #fff;
+    text-decoration: none;
+    border-bottom: 1px solid #fff;
+}
+
+.contactBox img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+}
+
+footer{
+    height: 80px;
+    background-color: #DE2E42;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer span{
+    font-weight: 800;
+    font-size: 20px;
+    color: #fff;
+}
 
 
 
