--- a/style.css
+++ b/style.css
@@ -14,18 +14,20 @@ header{
     justify-content: space-around;
     height: 55px;
     background-color: #DE2E42;
-    color: #fff;
+    color: #f3f3f3;
 }
 
-.logo{
-    font-size: 35px;
+.logo svg{
+    font-size: 20px;
+    width: 30%;
 }
 
 .links a{
     text-decoration: none;
-    color: #fff;
+    color: #f3f3f3;
     margin: 15px;
     font-size: 20px;
+    font-weight: 800;
 }
 
 
@@ -82,13 +84,13 @@ header{
 
 .rightbtn:hover{
     background-color: black;
-    color: #fff;
+    color: #f3f3f3;
     opacity: 0.8;
 }
 
 .leftbtn{
     background-color: #DE2E42;
-    color: #fff;
+    color: #f3f3f3;
     border: none;
 }
 
@@ -148,8 +150,6 @@ header{
     margin: 0 auto;
     margin: 10px;
     box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
-
-
 }
 
 .aboutContent{
@@ -157,7 +157,7 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #f3f3f3;
     border-radius: 20px;
     width: 65%;
     height: 40%;
@@ -166,9 +166,12 @@ header{
     box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
 }
 
+.aboutContent p{
+    margin: 10px;
+}
+
 .skills{
-    background-color: #fff;
-    height: 600px;
+    background-color: #f3f3f3;
     width: 100%;
     display: flex;
 }
@@ -190,7 +193,7 @@ header{
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    color: #fff;
+    color: #f3f3f3;
     border: 2px solid #404040;
     box-shadow: 5px 8px 8px rgba(0, 0, 0, 0.6)
     
@@ -253,7 +256,7 @@ header{
 }
 
 .title{
-    color: #fff;
+    color: #f3f3f3;
 }
 
 .projectsContainer{
@@ -268,7 +271,7 @@ header{
 .projectTab{
     height: 700px;
     width: 450px;
-    background-color: #fff;
+    background-color: #f3f3f3;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -335,7 +338,7 @@ header{
     height: 45px;
     width: 40%;
     background-color: #DE2E42;
-    color: #fff;
+    color: #f3f3f3;
     border: 2px solid #404040;
     border-radius: 10px;
     cursor: pointer;
@@ -390,9 +393,9 @@ header{
 
 .contactBox a{
     font-size: 28px;
-    color: #fff;
+    color: #f3f3f3;
     text-decoration: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #f3f3f3;
 }
 
 .contactBox img{
@@ -402,7 +405,7 @@ header{
 }
 
 footer{
-    height: 80px;
+    height: 40px;
     background-color: #DE2E42;
     display: flex;
     align-items: center;
@@ -412,9 +415,41 @@ footer{
 footer span{
     font-weight: 800;
     font-size: 20px;
-    color: #fff;
+    color: #f3f3f3;
 }
 
+@media only screen and (max-width: 700px){
 
+    .aboutContentContainer{
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .aboutContent{
+        width: 90%;
+        text-align: left;
+    }
+
+    .contactContainer{
+        flex-direction: column;
+        min-height: 800px;
+    }
+    .contacts{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    .contactBox{
+        width: 60%;
+        height: 200px;
+    }
+
+    .skillsContainer{
+        flex-direction: column;
+    }
+}
 
 
